--- a/public/gallery.html
+++ b/public/gallery.html
@@ -360,139 +360,178 @@
             initFirebase();
         }, []);
 
-        // Fetch photos from Firestore once auth is ready
-        useEffect(() => {
-            if (!isAuthReady || !db || !userId) return;
+     // Fetch photos from Firestore once auth is ready
+useEffect(() => {
+    if (!isAuthReady || !db || !userId) return;
 
-            // Determine which collection to query based on view mode
-            const path = isPublicView
-                ? `/artifacts/${appId}/public/data/family_gallery`
-                : `/artifacts/${appId}/users/${userId}/family_gallery`;
+    const path = isPublicView
+        ? `/artifacts/${appId}/public/data/family_gallery`
+        : `/artifacts/${appId}/users/${userId}/family_gallery`;
 
-            const photosCollectionRef = firebase.collection(db, path);
-            const q = firebase.query(photosCollectionRef, firebase.orderBy('createdAt', 'desc'));
+    const photosCollectionRef = firebase.collection(db, path);
+    const q = firebase.query(photosCollectionRef, firebase.orderBy('createdAt', 'desc'));
 
-            const unsubscribe = firebase.onSnapshot(q, (snapshot) => {
-                const fetchedPhotos = snapshot.docs.map(doc => ({
-                    id: doc.id,
-                    ...doc.data()
-                }));
-                setPhotos(fetchedPhotos);
-                setLoading(false);
+    const unsubscribe = firebase.onSnapshot(q, (snapshot) => {
+        const fetchedPhotos = snapshot.docs.map(doc => ({
+            id: doc.id,
+            ...doc.data()
+        }));
+        setPhotos(fetchedPhotos);
+        setLoading(false);
 
-                // Update albums list
-                const uniqueAlbums = ['כל התמונות', ...new Set(fetchedPhotos.map(p => p.album).filter(Boolean))];
-                setAlbums(uniqueAlbums);
-            }, (e) => {
-                console.error("Error fetching photos:", e);
-                setError(t.error);
-                setLoading(false);
+        // Update albums list
+        const uniqueAlbums = ['כל התמונות', ...new Set(fetchedPhotos.map(p => p.album).filter(Boolean))];
+        setAlbums(uniqueAlbums);
+    }, (e) => {
+        console.error("Error fetching photos:", e);
+        setError(t.error);
+        setLoading(false);
+    });
+
+    return () => unsubscribe();
+}, [isAuthReady, db, userId, isPublicView, language]);
+
+// Handle photo upload as Base64 (no Firebase Storage)
+const handleUpload = async (e) => {
+    e.preventDefault();
+    const file = fileRef.current.files[0];
+    const name = nameRef.current.value;
+    const family = familyRef.current.value;
+
+    if (!file || !name) {
+        showMessage(t.requiredFields);
+        return;
+    }
+
+    setUploading(true);
+    try {
+        // Convert file to Base64 URL
+        const reader = new FileReader();
+        reader.readAsDataURL(file);
+
+        reader.onload = async () => {
+            const base64Url = reader.result;
+
+            const photosCollectionRef = firebase.collection(db, `/artifacts/${appId}/users/${userId}/family_gallery`);
+            await firebase.addDoc(photosCollectionRef, {
+                name,
+                family,
+                path: base64Url,  // השמירה היא כקישור Base64
+                createdAt: firebase.serverTimestamp(),
+                album: newAlbumName || null,
             });
 
-            // Cleanup listener on unmount
-            return () => unsubscribe();
-        }, [isAuthReady, db, userId, isPublicView, language]);
-
-        // Handle photo upload
-        const handleUpload = async (e) => {
-            e.preventDefault();
-            const file = fileRef.current.files[0];
-            const name = nameRef.current.value;
-            const family = familyRef.current.value;
-
-            if (!file || !name) {
-                showMessage(t.requiredFields);
-                return;
-            }
-
-            setUploading(true);
-            try {
-                const storage = firebase.getStorage();
-                const storageRef = firebase.ref(storage, `family_photos/${userId}/${Date.now()}_${file.name}`);
-                await firebase.uploadBytes(storageRef, file);
-                const downloadURL = await firebase.getDownloadURL(storageRef);
-
-                const photosCollectionRef = firebase.collection(db, `/artifacts/${appId}/users/${userId}/family_gallery`);
-                await firebase.addDoc(photosCollectionRef, {
-                    name,
-                    family,
-                    path: downloadURL,
-                    storagePath: storageRef.fullPath, // Store the storage path for easy deletion
-                    createdAt: firebase.serverTimestamp(),
-                    album: newAlbumName || null,
-                });
-
-                showMessage(t.uploadSuccess);
-                nameRef.current.value = '';
-                familyRef.current.value = '';
-                fileRef.current.value = '';
-                setNewAlbumName('');
-            } catch (e) {
-                console.error("Error uploading photo:", e);
-                setError(t.error);
-            } finally {
-                setUploading(false);
-            }
+            showMessage(t.uploadSuccess);
+            nameRef.current.value = '';
+            familyRef.current.value = '';
+            fileRef.current.value = '';
+            setNewAlbumName('');
+            setUploading(false);
         };
 
-        // Function to delete a photo after confirmation
-        const confirmDelete = async () => {
-            if (!photoToDelete) return;
-
-            try {
-                const storage = firebase.getStorage();
-                const imageRef = firebase.ref(storage, photoToDelete.storagePath);
-                await firebase.deleteObject(imageRef);
-
-                const docRef = firebase.doc(db, `/artifacts/${appId}/users/${userId}/family_gallery`, photoToDelete.id);
-                await firebase.deleteDoc(docRef);
-
-                showMessage(t.deleteSuccess);
-            } catch (e) {
-                console.error("Error deleting photo:", e);
-                setError(t.error);
-            } finally {
-                setShowDeleteModal(false);
-                setPhotoToDelete(null);
-            }
+        reader.onerror = (err) => {
+            console.error("Error reading file:", err);
+            setError(t.error);
+            setUploading(false);
         };
 
-        // Function to update a photo's details
-        const handleUpdate = async () => {
-            if (!editingPhoto) return;
-            try {
-                const docRef = firebase.doc(db, `/artifacts/${appId}/users/${userId}/family_gallery`, editingPhoto.id);
-                await firebase.updateDoc(docRef, {
-                    name: editName,
-                    family: editFamily,
-                });
-                showMessage(t.updateSuccess);
-                setEditingPhoto(null);
-                closeModal();
-            } catch (e) {
-                console.error("Error updating photo:", e);
-                setError(t.error);
-            }
-        };
+    } catch (e) {
+        console.error("Error uploading photo:", e);
+        setError(t.error);
+        setUploading(false);
+    }
+};
 
-        // Function to share a photo to the public gallery
-        const handleShare = async (photo) => {
-            try {
-                const publicCollectionRef = firebase.collection(db, `/artifacts/${appId}/public/data/family_gallery`);
-                await firebase.addDoc(publicCollectionRef, {
-                    name: photo.name,
-                    family: photo.family,
-                    path: photo.path,
-                    createdAt: firebase.serverTimestamp(),
-                    originalPhotoId: photo.id, // Reference to the original document
-                    originalUserId: userId, // Reference to the original user
-                });
-                showMessage(t.shareSuccess);
-            } catch (e) {
-                console.error("Error sharing photo:", e);
-                setError(t.error);
-            }
-        };
+// Delete photo
+const confirmDelete = async () => {
+    if (!photoToDelete) return;
+
+    try {
+        const docRef = firebase.doc(db, `/artifacts/${appId}/users/${userId}/family_gallery`, photoToDelete.id);
+        await firebase.deleteDoc(docRef);
+
+        showMessage(t.deleteSuccess);
+    } catch (e) {
+        console.error("Error deleting photo:", e);
+        setError(t.error);
+    } finally {
+        setShowDeleteModal(false);
+        setPhotoToDelete(null);
+    }
+};
+
+// Update photo details
+const handleUpdate = async () => {
+    if (!editingPhoto) return;
+    try {
+        const docRef = firebase.doc(db, `/artifacts/${appId}/users/${userId}/family_gallery`, editingPhoto.id);
+        await firebase.updateDoc(docRef, {
+            name: editName,
+            family: editFamily,
+        });
+        showMessage(t.updateSuccess);
+        setEditingPhoto(null);
+        closeModal();
+    } catch (e) {
+        console.error("Error updating photo:", e);
+        setError(t.error);
+    }
+};
+
+// Share photo to public gallery
+const handleShare = async (photo) => {
+    try {
+        const publicCollectionRef = firebase.collection(db, `/artifacts/${appId}/public/data/family_gallery`);
+        await firebase.addDoc(publicCollectionRef, {
+            name: photo.name,
+            family: photo.family,
+            path: photo.path,
+            createdAt: firebase.serverTimestamp(),
+            originalPhotoId: photo.id,
+            originalUserId: userId,
+        });
+        showMessage(t.shareSuccess);
+    } catch (e) {
+        console.error("Error sharing photo:", e);
+        setError(t.error);
+    }
+};
+        export default function ImagePreview() {
+  const [preview, setPreview] = useState(null);
+  const fileRef = useRef(null);
+
+  // Handle file selection
+  const handleFileChange = (e) => {
+    const file = e.target.files[0];
+    if (!file) return;
+
+    const reader = new FileReader();
+    reader.readAsDataURL(file); // Convert file to Base64 URL
+    reader.onload = () => setPreview(reader.result);
+    reader.onerror = (err) => console.error("Error reading file:", err);
+  };
+
+  // Optional: Drag-and-drop support
+  const handleDrop = (e) => {
+    e.preventDefault();
+    const file = e.dataTransfer.files[0];
+    if (!file) return;
+    fileRef.current.files = e.dataTransfer.files;
+    handleFileChange({ target: { files: e.dataTransfer.files } });
+  };
+  const handleDragOver = (e) => e.preventDefault();
+
+  return (
+    <div onDrop={handleDrop} onDragOver={handleDragOver}>
+      <input type="file" ref={fileRef} onChange={handleFileChange} />
+      {preview && (
+        <div style={{ marginTop: '10px' }}>
+          <img src={preview} alt="Preview" style={{ width: '200px', border: '1px solid #ccc', padding: '5px' }} />
+        </div>
+      )}
+    </div>
+  );
+}
 
         // Open modal to view a larger image
         const openModal = (photo) => {
