--- a/public/gallery.html
+++ b/public/gallery.html
@@ -277,7 +277,7 @@
             reader.readAsDataURL(blob);
         });
     };
-
+<script>
     // Main App component
     const App = () => {
         // State variables
