--- a/public/gallery.html
+++ b/public/gallery.html
@@ -236,7 +236,7 @@
             apiKey: "AIzaSyB99bQpokjpcuXilwu3usXoOFLmegkVnb4",
             authDomain: "family-gallery-d707d.firebaseapp.com",
             projectId: "family-gallery-d707d",
-            storageBucket: "family-gallery-d707d.appspot.com"
+            storageBucket: "family-gallery-d707d.appspot.com",
             messagingSenderId: "227810040631",
             appId: "1:227810040631:web:6bc0dc9a983fac04e4d8b2",
             measurementId: "G-84CYX5S1F3"
